REGRESSION(r151957): WebGL textures do not show https://bugs.webkit.org/show_bug.cgi?id=118464

Reviewed by Christophe Dumez.

After r151957 decoder.frameIsCompleteAtIndex(0) doesn't trigger image decoding,
we have to call decoder.createFrameAtIndex(0) explicitly to ensure it.

* platform/graphics/cairo/GraphicsContext3DCairo.cpp:
(WebCore::GraphicsContext3D::ImageExtractor::extractImage):
* platform/graphics/efl/GraphicsContext3DEfl.cpp:
(WebCore::GraphicsContext3D::ImageExtractor::extractImage):


Canonical link: https://commits.webkit.org/136485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152531 268f45cc-cd09-0410-ab3c-d52691b4dbfc