Source/WebCore/platform/graphics/efl/GraphicsContext3DEfl.cpp
@@ -265,10 +265,12 @@ bool GraphicsContext3D::ImageExtractor::extractImage(bool premultiplyAlpha, bool
     if (m_image->data()) {
         decoder.setData(m_image->data(), true);
 
-        if (!decoder.frameCount() || !decoder.frameIsCompleteAtIndex(0))
+        if (!decoder.frameCount())
             return false;
 
         m_imageSurface = decoder.createFrameAtIndex(0);
+        if (!m_imageSurface || !decoder.frameIsCompleteAtIndex(0))
+            return false;
     } else {
         m_imageSurface = m_image->nativeImageForCurrentFrame();
         // 1. For texImage2D with HTMLVideoElment input, assume no PremultiplyAlpha had been applied and the alpha value is 0xFF for each pixel,
